http://li3.me/docs/specs/accepted/LSR-0-coding.md

New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2019-07-19 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.17.3


2019-07-19 niel
	Fix: Missing ',' in SQL, hopefully reduce overhead formatting 'Message-Id'. Closes Issue 2633.
2019-07-18 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.17.2

2019-07-18 niel
	Fix: Force NNTP headers to title case (Upper-case first letter, the rest lower-case. (Closes
		Issue 2632).
2019-07-18 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.17.1


2019-07-18 niel
	Fix: Remove include_once that was made superfluous.
	Chg: 'Optimisations' for NNTP::getXOVER().
2019-07-18 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.17.0


2019-07-18
	Fix: Ensure DB.php has Settings.php loaded if available.
2019-07-17 DariusIII
	Chg: Add newznab:apilimit to API and RSS XML response with limits and current api hits and grabs
2019-06-19 niel
	Mrg: PR 2631, from Wally73 - Update movie-add.php for larger IMDb IDs.
2019-06-03 niel
	Fix: Increase size of imdbid fields in movieinfo, releases, and user_movies tables to bring us
		inline with IMDb's latest entries.
2019-06-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.17.0


2019-06-02 niel
	Add: Phinx package to handle Db updates in future.


2019-05-09 niel
	Add: Backport change from CakePHP/Laravel that copies TSV files to /tmp before trying to LOAD
		INFILE them. This should resolve any permission issues as /tmp is readable by anyone by
		default.


2019-03-25 niel
	Fix: Reduce the size of tmux table's 'value' column from 19000 to a more reasonable size (1000).