@@ -10,6 +10,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2019-07-21 niel
+	* Fix: .../nzedb/NameFixer.php, Convert 'continue' to 'break' in switch statement.
 2019-07-19 niel
 	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.17.3
 
